# oxc

./: Cargo.toml
apps/oxfmt/src/core/: support.rs
apps/oxfmt/src/core/options/: to_oxc_formatter_json.rs
apps/oxlint/src-js/package/: config.generated.ts
crates/oxc/src/: compiler.rs
crates/oxc_formatter_json/src/: lib.rs  options.rs
crates/oxc_formatter_json/src/print/: literal.rs  object.rs
crates/oxc_formatter_json/tests/fixtures/: mod.rs
crates/oxc_linter/src/rules/oxc/: no_map_spread.rs
crates/oxc_minifier/src/: state.rs
crates/oxc_minifier/src/peephole/: inline.rs  mod.rs  remove_unused_expression.rs  replace_known_methods.rs
crates/oxc_minifier/tests/peephole/: inline.rs
crates/oxc_parser/src/: diagnostics.rs
crates/oxc_parser/src/ts/: statement.rs
crates/oxc_react_compiler/: Cargo.toml  PLAN.md
crates/oxc_react_compiler/examples/: react_compiler.rs
crates/oxc_react_compiler/src/: apply_renames.rs  convert_ast.rs  convert_ast_reverse.rs  convert_scope.rs  diagnostics.rs  lib.rs  prefilter.rs
crates/oxc_transformer/: Cargo.toml
crates/oxc_transformer/src/: lib.rs  react_compiler.rs
crates/oxc_transformer/src/options/: mod.rs
crates/oxc_transformer/tests/integrations/: main.rs  react_compiler.rs
crates/oxc_transformer_plugins/: Cargo.toml
crates/oxc_transformer_plugins/src/: lib.rs  react_compiler.rs
crates/oxc_transformer_plugins/tests/integrations/: main.rs  react_compiler.rs
napi/transform/: index.d.ts
napi/transform/src/: transformer.rs
napi/transform/test/: reactCompiler.test.ts
npm/oxlint/: configuration_schema.json
tasks/coverage/snapshots/: parser_babel.snap  parser_typescript.snap
tasks/minsize/: minsize.snap
tasks/prettier_conformance/src/: options.rs  spec.rs
tasks/track_memory_allocations/: allocs_minifier.snap
tasks/website_linter/src/snapshots/: schema_json.snap
