# oxc_react_compiler
#
# Native oxc integration for the Rust port of React Compiler (facebook/react#36173).
#
# This crate owns the oxc <-> react_compiler_ast conversion layer. The React
# Compiler *core* crates are frontend-agnostic (they depend on serde/indexmap
# only, never on oxc), so we consume them as git dependencies and keep the
# AST/scope conversion on our side, written against the live workspace oxc AST.
#
# As a workspace member, the React git dependency is fetched during workspace
# cargo operations; bump the `rev` below deliberately when syncing upstream.

[package]
name = "oxc_react_compiler"
version = "0.0.0"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "oxc integration for the Rust port of React Compiler"

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_parser = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }

# React Compiler core crates — frontend-agnostic (no oxc deps), from PR
# facebook/react#36173. Pinned to a rev; bump deliberately when syncing upstream.
react_compiler = { git = "https://github.com/josephsavona/react", rev = "75f6a2b16b7826b9a35a9b86fd135f19a37af05c" }
react_compiler_ast = { git = "https://github.com/josephsavona/react", rev = "75f6a2b16b7826b9a35a9b86fd135f19a37af05c" }
react_compiler_hir = { git = "https://github.com/josephsavona/react", rev = "75f6a2b16b7826b9a35a9b86fd135f19a37af05c" }

indexmap = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, features = ["raw_value"] }

# The `src/` conversion modules are vendored close to upstream `react_compiler_oxc`
# (kept near byte-for-byte to ease re-syncing), so relax the handful of lints they
# trip here rather than editing the code. Defining `[lints.clippy]` means this crate
# does not inherit `[lints] workspace = true`, which keeps the in-house restriction
# lints (`todo!`/`unimplemented!`/...) off the vendored code while clippy's default
# correctness and perf checks still apply.
[lints.clippy]
disallowed_types = "allow" # upstream uses std HashMap / HashSet
collapsible_if = "allow"
needless_return = "allow"
unnecessary_unwrap = "allow"
